# arxiv-research-copilot

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt
config/: config.yaml
scripts/: download_papers.py  process_papers.py  run_ingestion.py
src/api/: main.py
src/generation/: llm.py  narrative.py  prompts.py
src/ingestion/: downloader.py  pipeline.py  processor.py
src/retrieval/: embedder.py  vector_store.py
src/ui/: app.py
src/utils/: config.py  logger.py  tracing.py
tests/: test_generation.py  test_ingestion.py  test_retrieval.py
